--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,103 +33,120 @@ body {
 }
 
 p.ellipsis {
-    text-overflow: ellipsis;
-      white-space: nowrap;
-      width: 600px;
-      overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 600px;
+  overflow: hidden;
 }
 
 @layer components {
-    .btn {
-        @apply bg-blue-300 font-bold py-2 px-4 rounded;
-    }
-    .btn:hover {
-        @apply bg-blue-500 text-white;
-    }
-    .btn-red {
-        @apply bg-red-300 text-white;
-    }
-    .btn-red:hover {
-        @apply bg-red-700;
-    }
-    .shutter{
-      width:200px;
-      height:200px;
-      display:inline-block;
-      border-radius: 50%;
-      border:1px solid;
-      overflow:hidden;
-      position:relative;
-      --p1:60%;
-      --p2:48%;
-      --p3:38%;
-      
-      --c1: transparent var(--p1),#000 calc(var(--p1) + 1px) calc(var(--p1) + 4px),grey calc(var(--p1) + 5px);
-      --c2: transparent var(--p2),#000 calc(var(--p2) + 1px) calc(var(--p2) + 4px),grey calc(var(--p2) + 5px);
-      --c3: transparent var(--p3),#000 calc(var(--p3) + 1px) calc(var(--p3) + 4px),grey calc(var(--p3) + 5px);
-    }
+  .btn {
+    @apply bg-blue-300 font-bold py-2 px-4 rounded;
+  }
+  .btn:hover {
+    @apply bg-blue-500 text-white;
+  }
+  .btn-red {
+    @apply bg-red-300 text-white;
+  }
+  .btn-red:hover {
+    @apply bg-red-700;
+  }
+  .motive {
+    position: fixed;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    z-index: 1;
+  }
+  .shutterbody {
+    position: fixed;
+  }
+  .shutter {
+    z-index: 999999;
+    width: 200px;
+    height: 200px;
+    /* display:inline-block; */
+    border-radius: 50%;
+    border: 1px solid;
+    overflow: hidden;
+    position: relative;
+    --p1: 60%;
+    --p2: 48%;
+    --p3: 38%;
 
-    .shutter::before,
-    .shutter::after{
-      content:"";
-      position:absolute;
-      top:-50%;
-      left:50%;
-      height:200%;
-      width:100%;
-      transition:.05s all linear;
-      background: 
-        linear-gradient(-126deg,var(--c1)) bottom left / var(--e1,40%) var(--e2,20%) no-repeat,
-        linear-gradient(-162deg,var(--c1)) bottom / 100% var(--e3,60%) no-repeat, 
-        
-        linear-gradient(162deg,var(--c1)),
-        linear-gradient(126deg,var(--c2)),      
-        linear-gradient(90deg, var(--c3)),      
-        linear-gradient(54deg ,var(--c2)),
-        linear-gradient(18deg ,var(--c1)); /* 36deg/2 then we increment by 36deg*/
-    }
+    --c1: transparent var(--p1),
+      #000 calc(var(--p1) + 1px) calc(var(--p1) + 4px),
+      grey calc(var(--p1) + 5px);
+    --c2: transparent var(--p2),
+      #000 calc(var(--p2) + 1px) calc(var(--p2) + 4px),
+      grey calc(var(--p2) + 5px);
+    --c3: transparent var(--p3),
+      #000 calc(var(--p3) + 1px) calc(var(--p3) + 4px),
+      grey calc(var(--p3) + 5px);
+  }
 
-    .shutter::after{
-      transform:rotate(180deg);
-      transform-origin:left;
-    }
+  .shutter::before,
+  .shutter::after {
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: 50%;
+    height: 200%;
+    width: 100%;
+    transition: 0.05s all linear;
+    background:
+      linear-gradient(-126deg, var(--c1)) bottom left / var(--e1, 40%)
+        var(--e2, 20%) no-repeat,
+      linear-gradient(-162deg, var(--c1)) bottom / 100% var(--e3, 60%) no-repeat,
+      linear-gradient(162deg, var(--c1)),
+      linear-gradient(126deg, var(--c2)),
+      linear-gradient(90deg, var(--c3)),
+      linear-gradient(54deg, var(--c2)),
+      linear-gradient(18deg, var(--c1)); /* 36deg/2 then we increment by 36deg*/
+  }
 
-    .released::before,
-    .released::after{
-      top:0;
-      left:50%;
-      height:100%;
-      width:50%;
-    }
+  .shutter::after {
+    transform: rotate(180deg);
+    transform-origin: left;
+  }
 
-    .blinker {
-        animation: blink 1s linear;
-        animation-iteration-count: 5;
+  .released::before,
+  .released::after {
+    top: 0;
+    left: 50%;
+    height: 100%;
+    width: 50%;
+  }
+
+  .blinker {
+    animation: blink 1s linear;
+    animation-iteration-count: 5;
+  }
+  @keyframes blink {
+    25% {
+      opacity: 0.5;
     }
-    @keyframes blink {
-        25% {
-            opacity: 0.5;
-        }
-        50% {
-            opacity: 1;
-        }
-        75% {
-            opacity: 0.5;
-        }
+    50% {
+      opacity: 1;
     }
-    .dot {
-        height: 25px;
-        width: 25px;
-        background-color: rgb(255, 50, 0);
-        border-radius: 50%;
-        opacity: 0;
+    75% {
+      opacity: 0.5;
     }
-    .camera-control {
-        display: inline-block;
-        margin-right: 5px;
-        vertical-align: top;
-    }
-    .inactive {
-        filter: contrast(1%);
-    }
+  }
+  .dot {
+    height: 25px;
+    width: 25px;
+    background-color: rgb(255, 50, 0);
+    border-radius: 50%;
+    opacity: 0;
+  }
+  .camera-control {
+    display: inline-block;
+    margin-right: 5px;
+    vertical-align: top;
+  }
+  .inactive {
+    filter: contrast(1%);
+  }
 }
