Add info text for timer
Wanted to do a popover, but could not get it to work so far...

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -198,4 +198,17 @@ p.ellipsis {
     z-index: 10;
     overflow-y: scroll;
   }
+
+  .popover {
+    cursor: "pointer";
+  }
+
+  .popover > .info {
+    display: "none";
+    background-color: "red";
+  }
+
+  .popover:hover > .info {
+    display: block;
+  }
 }
