--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -172,29 +172,17 @@ p.ellipsis {
   .inactive {
     filter: contrast(1%);
   }
-  #recharge {
+
+.overlay {
     position: fixed;
     display: none;
     top: 0;
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.9);
-    bottom: 10%;
+    bottom: 20%;
     z-index: 9;
     overflow-y: auto;
-  }
-  #overlay {
-    position: fixed;
-    display: none;
-    width: 80%;
-    height: 80%;
-    top: 10%;
-    left: 10%;
-    right: 10%;
-    bottom: 10%;
-    background-color: rgba(255, 255, 255, 0.9);
-    z-index: 10;
-    overflow-y: scroll;
   }
 
   .popover {
